# kww_modern_python_bindings

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  README.md  kww.pc.in
bindings/python/: README  files.txt  kww.c  kww.i  kww.py  kww_wrap.c  setup.py
bindings/python/kww_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
demo/: CMakeLists.txt  kww_checks.rb  kww_countterms.c  kww_echolims.c  kww_findlims.rb  kww_lowestlims.rb  kww_runthree.rb  plotkww.rb  runkww.c
lib/: CMakeLists.txt  extended_double.h  kww.c  kww.h  kww_lowlevel.c  kww_lowlevel.h
man/: CMakeLists.txt  kww.pod
test/: CMakeLists.txt  kwwtest.c
